--- a/E-learning-portal/Views/Account/Register.cshtml
+++ b/E-learning-portal/Views/Account/Register.cshtml
@@ -11,6 +11,14 @@
     <h4>Создайте новую учетную запись.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <div class="col-md-offset-2 col-md-10">
+            <div class="checkbox">
+                @Html.CheckBoxFor(m => m.TeacherRole)
+                @Html.LabelFor(m => m.TeacherRole)
+            </div>
+        </div>
+    </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
