--- a/E-learning-portal/Views/Teacher/Index.cshtml
+++ b/E-learning-portal/Views/Teacher/Index.cshtml
@@ -6,7 +6,6 @@
 
 <h2>Index</h2>
 <div>
-    <h4>PurchaseViewModel</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,7 +42,7 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new {  id = Model.TeacherId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
 
