--- a/E-learning-portal/Views/Material/Material.cshtml
+++ b/E-learning-portal/Views/Material/Material.cshtml
@@ -13,6 +13,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Name)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Course)
+        </th>
     </tr>
 
     @foreach (var item in Model)
@@ -25,6 +28,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Course)
                 </td>
                 <td>
                     @Html.ActionLink("Редактировать", "Edit", new { id = item.MaterialId }) |
