--- a/E-learning-portal/Views/Shared/_Layout.cshtml
+++ b/E-learning-portal/Views/Shared/_Layout.cshtml
@@ -37,8 +37,8 @@
     <div class="w3-sidebar w3-bar-block w3-border-right" style="display:none" id="mySidebar">
         <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
         <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Material", "Material")</a>
-        <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("О программе", "About", "Home")</a>
-        <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("О программе", "About", "Home")</a>
+        <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Task", "Task")</a>
+        <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "Index", "Classbook")</a>
     </div>
 
     <!-- Page Content -->
