Добавил журнал в преподавателя(обновлено)

--- a/E-learning-portal/Views/Classbook/CourseDetails.cshtml
+++ b/E-learning-portal/Views/Classbook/CourseDetails.cshtml
@@ -25,7 +25,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "SubjectEdit", new { id = item.ClassbookId }) |
-                @Html.ActionLink("Далее", "SubjectDetails", new { id = item.ClassbookId }) |
+                @Html.ActionLink("Далее", "Students", new { id = item.ClassbookId }) |
                 @Html.ActionLink("Delete", "SubjectDelete", new { id = item.ClassbookId })
             </td>
         </tr>
