--- a/E-learning-portal/Views/Classbook/GDetails.cshtml
+++ b/E-learning-portal/Views/Classbook/GDetails.cshtml
@@ -1,33 +1,34 @@
-﻿@model IEnumerable<E_learning_portal.Models.MyModels.Classbook>
+﻿@model IEnumerable<E_learning_portal.Models.MyModels.Group>
 
-@{
-    ViewBag.Title = "GDetails";
-}
+    @{
+        ViewBag.Title = "GDetails";
+    }
 
-<h2>GDetails</h2>
+    <h2>GDetails</h2>
 
-<p>
-    @Html.ActionLink("Создать", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.GroupId)
-        </th>
-        <th></th>
-    </tr>
+    <p>
+        @Html.ActionLink("Создать", "Create")
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.GroupId)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ClassbookId }) |
-            @Html.ActionLink("Далее", "Students", new { id=item.ClassbookId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ClassbookId })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.GroupId)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ClassbookId }) |
+                    @Html.ActionLink("Далее", "Students", new { id = item.GroupId }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ClassbookId })
+                </td>
+            </tr>
+        }
 
-</table>
+    </table>
