--- a/E-learning-portal/Views/Classbook/Index.cshtml
+++ b/E-learning-portal/Views/Classbook/Index.cshtml
@@ -5,18 +5,21 @@
 }
 
 <h2>Index</h2>
+<div class="w3-teal" style="width:25px; margin-top:25px; ">
+    <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
+</div>
+<div class="w3-sidebar w3-bar-block w3-border-right" style="display:none; margin-top:25px;" id="mySidebar">
+    <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Material", "Material")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Task", "Task")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "Index", "Classbook")</a>
+</div>
 
 <p>
     @Html.ActionLink("Создать запись", "AddMark")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Mark)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.Subject)
         </th>
@@ -29,21 +32,15 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Mark)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Subject)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Course)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ClassbookId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ClassbookId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ClassbookId })
+            @Html.ActionLink("Edit", "EditMark", new { id=item.ClassbookId }) |
+            @Html.ActionLink("Details", "MarkDetails", new { id=item.ClassbookId }) |
+            @Html.ActionLink("Delete", "DeleteMark", new { id=item.ClassbookId })
         </td>
     </tr>
 }
