--- a/E-learning-portal/Views/Material/Course.cshtml
+++ b/E-learning-portal/Views/Material/Course.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Kyrsach.Models.My_Models.Material>
+﻿@model IEnumerable<E_learning_portal.Models.MyModels.Material>
 
 @{
-    ViewBag.Title = "Курсы";
+    ViewBag.Title = "Курс";
 }
 
-<h2>Курсы</h2>
+<h2>Курс</h2>
 
 <table class="table">
     <tr>
@@ -20,10 +20,9 @@
             @Html.DisplayFor(modelItem => item.Course)
         </td>
         <td>
-            @Html.ActionLink("Далее", "SDetails", new { id=item.MaterialId }) |
+            @Html.ActionLink("Details", "Subject", new { id=item.MaterialId }) |
         </td>
     </tr>
 }
 
 </table>
-
