--- a/E-learning-portal/Views/Material/Name.cshtml
+++ b/E-learning-portal/Views/Material/Name.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Kyrsach.Models.My_Models.Material>
+﻿@model IEnumerable<E_learning_portal.Models.MyModels.Material>
 
 @{
-    ViewBag.Title = "Список материалов";
+    ViewBag.Title = "Название";
 }
 
-<h2>Список материалов</h2>
+<h2>Название</h2>
 
 <table class="table">
     <tr>
@@ -19,11 +19,10 @@
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
-        <td> |
-            @Html.ActionLink("Далее", "Details", new { id=item.MaterialId }) |
+        <td>
+            @Html.ActionLink("Details", "Content", new { id=item.MaterialId }) |
         </td>
     </tr>
 }
 
 </table>
-
