--- a/E-learning-portal/Views/Material/Subject.cshtml
+++ b/E-learning-portal/Views/Material/Subject.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Kyrsach.Models.My_Models.Material>
+﻿@model IEnumerable<E_learning_portal.Models.MyModels.Material>
 
 @{
-    ViewBag.Title = "Предметы";
+    ViewBag.Title = "Предмет";
 }
 
-<h2>Предметы</h2>
+<h2>Предмет</h2>
 
 <table class="table">
     <tr>
@@ -19,12 +19,10 @@
         <td>
             @Html.DisplayFor(modelItem => item.Subject)
         </td>
-
         <td>
-            @Html.ActionLink("Далее", "NDetails", new { id=item.MaterialId }) |
+            @Html.ActionLink("Details", "Name", new { id=item.MaterialId }) |
         </td>
     </tr>
 }
 
 </table>
-
