--- a/E-learning-portal/Views/Task/Task.cshtml
+++ b/E-learning-portal/Views/Task/Task.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Tasks";
 }
 
-<h2>TAsk</h2>
+<h2>Task</h2>
 @Html.ActionLink("Добавить", "Create")
 <table class="table">
     <tr>
