--- a/E-learning-portal/Views/Classbook/AddMark.cshtml
+++ b/E-learning-portal/Views/Classbook/AddMark.cshtml
@@ -11,7 +11,7 @@
 <div class="w3-sidebar w3-bar-block w3-border-right" style="display:none; margin-top:25px;" id="mySidebar">
     <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
     <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Material", "Material")</a>
-    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Task", "Task")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Index", "Task")</a>
     <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "Index", "Classbook")</a>
 </div>
 <%:Html.MyValidationSummary()%>
