--- a/E-learning-portal/Views/Classbook/TMarkDetails.cshtml
+++ b/E-learning-portal/Views/Classbook/TMarkDetails.cshtml
@@ -1,20 +1,19 @@
 ﻿@model E_learning_portal.Models.MyModels.Classbook
 
 @{
-    ViewBag.Title = "MarkDetails";
+    ViewBag.Title = "TMarkDetails";
 }
-
-<h2>MarkDetails</h2>
-
 <div class="w3-teal" style="width:25px; margin-top:25px; ">
     <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
 </div>
 <div class="w3-sidebar w3-bar-block w3-border-right" style="display:none; margin-top:25px;" id="mySidebar">
     <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Faculty", "Material")</a>
-    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "STask", "Task")</a>
-    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "SIndex", "Classbook")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Material", "Material")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Index", "Task")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "Index", "Classbook")</a>
 </div>
+<h2>TMarkDetails</h2>
+
 <div>
     <h4>Classbook</h4>
     <hr />
@@ -51,24 +50,14 @@
             @Html.DisplayFor(model => model.Course)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Student.Name)
+        </dt>
+
         <dd>
-            @Html.DisplayNameFor(model => model.Teacher.Surname)
+            @Html.DisplayFor(model => model.Student.Surname)
         </dd>
-        <dd>
-            @Html.DisplayFor(model => model.Teacher.Surname)
-        </dd>
-        <dd>
-            @Html.DisplayNameFor(model => model.Teacher.Name)
-        </dd>
-        <dd>
-            @Html.DisplayFor(model => model.Teacher.Name)
-        </dd>
-        <dd>
-            @Html.DisplayNameFor(model => model.Teacher.Patronymic)
-        </dd>
-        <dd>
-            @Html.DisplayFor(model => model.Teacher.Patronymic)
-        </dd>
+
     </dl>
 </div>
 <p>
