--- a/E-learning-portal/Views/Material/Create.cshtml
+++ b/E-learning-portal/Views/Material/Create.cshtml
@@ -2,7 +2,15 @@
 @{
     ViewBag.Title = "Create";
 }
-
+<div class="w3-teal" style="width:25px; margin-top:25px; ">
+    <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
+</div>
+<div class="w3-sidebar w3-bar-block w3-border-right" style="display:none; margin-top:25px;" id="mySidebar">
+    <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Material", "Material")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Index", "Task")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "Index", "Classbook")</a>
+</div>
 <link href="~/Scripts/Uploadify/uploadify.css" rel="stylesheet" />
 <script src="~/Scripts/Uploadify/jquery.uploadify.min.js"></script>
 <script src="~/Scripts/Tinymce/tinymce.min.js"></script>
@@ -54,6 +62,18 @@
         @using (Html.BeginForm("Create", "Material", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
             <div class="form-horizontal">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Faculty, new { @class = "col-lg-2 control-label" })
+                    <div class="col-lg-9">
+                        @Html.TextBoxFor(model => model.Faculty, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Department, new { @class = "col-lg-2 control-label" })
+                    <div class="col-lg-9">
+                        @Html.TextBoxFor(model => model.Department, new { @class = "form-control" })
+                    </div>
+                </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Name, new { @class = "col-lg-2 control-label" })
                     <div class="col-lg-9">
