--- a/E-learning-portal/Views/Task/DTask.cshtml
+++ b/E-learning-portal/Views/Task/DTask.cshtml
@@ -1,10 +1,8 @@
-﻿@model IEnumerable<E_learning_portal.Models.MyModels.Classbook>
+﻿@model IEnumerable<E_learning_portal.Models.MyModels.Task>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "DTask";
 }
-
-<h2>Index</h2>
 <div class="w3-teal" style="width:25px; margin-top:25px; ">
     <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
 </div>
@@ -14,12 +12,13 @@
     <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Index", "Task")</a>
     <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "Index", "Classbook")</a>
 </div>
+<h2>DTask</h2>
 
-<p>
-    @Html.ActionLink("Создать запись", "AddMark")
-</p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Subject)
         </th>
@@ -29,9 +28,11 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model)
-{
+@foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Name)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Subject)
         </td>
@@ -39,9 +40,8 @@
             @Html.DisplayFor(modelItem => item.Course)
         </td>
         <td>
-            @Html.ActionLink("Edit", "EditMark", new { id=item.ClassbookId }) |
-            @Html.ActionLink("Details", "TMarkDetails", new { id=item.ClassbookId }) |
-            @Html.ActionLink("Delete", "DeleteMark", new { id=item.ClassbookId })
+            @Html.ActionLink("Details", "TeacherTaskDetails", new { id=item.TaskId }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.TaskId })
         </td>
     </tr>
 }
