--- a/E-learning-portal/Views/Task/SDTask.cshtml
+++ b/E-learning-portal/Views/Task/SDTask.cshtml
@@ -3,7 +3,15 @@
 @{
     ViewBag.Title = "Выполненные задания";
 }
-
+<div class="w3-teal" style="width:25px; margin-top:25px; ">
+    <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
+</div>
+<div class="w3-sidebar w3-bar-block w3-border-right" style="display:none; margin-top:25px;" id="mySidebar">
+    <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Faculty", "Material")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "STask", "Task")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "SIndex", "Classbook")</a>
+</div>
 <h2>Выполненные задания</h2>
 
 <table class="table">
@@ -16,6 +24,12 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Course)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Student.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Student.Surname)
         </th>
         <th></th>
     </tr>
@@ -33,8 +47,16 @@
                 @Html.DisplayFor(modelItem => item.Course)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Student.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Student.Surname)
+            </td>
+            <td>
                 @Html.ActionLink("Редактировать", "DoneEdit", new { id = item.TaskId }) |
                 @Html.ActionLink("Детали", "DoneDetails", new { id = item.TaskId }) |
+                @Html.ActionLink("Удалить", "Delete", new { id = item.TaskId })
+                
             </td>
         </tr>
     }
