--- a/E-learning-portal/Views/Task/TaskView.cshtml
+++ b/E-learning-portal/Views/Task/TaskView.cshtml
@@ -2,6 +2,15 @@
 @{
     ViewBag.Title = "TaskDisplay";
 }
+<div class="w3-teal" style="width:25px; margin-top:25px; ">
+    <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
+</div>
+<div class="w3-sidebar w3-bar-block w3-border-right" style="display:none; margin-top:25px;" id="mySidebar">
+    <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Материал", "Material", "Material")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Задание", "Task", "Task")</a>
+    <a href="#" class="w3-bar-item w3-button">@Html.ActionLink("Журнал", "Index", "Classbook")</a>
+</div>
 <h2>News Display - View The Submitted Content</h2>
 <div class="panel panel-primary">
     <div class="panel-heading panel-head">Add News</div>
